--- a/test/index.html
+++ b/test/index.html
@@ -7,7 +7,8 @@ import {
   DialogTitle,
   DialogCloseTrigger,
 } from '@chakra-ui/react'
-import { Button, Text, HStack, useToast, Alert, AlertIcon } from '@chakra-ui/react'
+import { Button, Text, HStack, useToast } from '@chakra-ui/react'
+import { Alert, AlertIcon } from '@chakra-ui/react/alert'
 import { useMutation, useQueryClient } from '@tanstack/react-query'
 
 interface Category {
