--- a/test/index.html
+++ b/test/index.html
@@ -6,9 +6,17 @@ import {
   DialogFooter,
   DialogTitle,
   DialogCloseTrigger,
+  Button,
+  Text,
+  HStack,
 } from '@chakra-ui/react'
-import { Button, Text, HStack, useToast } from '@chakra-ui/react'
-import { Alert, AlertIcon } from '@chakra-ui/react/alert'
+import {
+  AlertRoot,
+  AlertIndicator,
+  AlertTitle,
+  AlertDescription,
+} from '@chakra-ui/react/alert'
+import { Toaster, toaster } from '@chakra-ui/react/toaster'
 import { useMutation, useQueryClient } from '@tanstack/react-query'
 
 interface Category {
@@ -24,7 +32,6 @@ interface DeleteCategoryModalProps {
 
 export function DeleteCategoryModal({ isOpen, onClose, category }: DeleteCategoryModalProps) {
   const queryClient = useQueryClient()
-  const toast = useToast()
 
   const deleteMutation = useMutation({
     mutationFn: async (categoryId: string) => {
@@ -34,22 +41,20 @@ export function DeleteCategoryModal({ isOpen, onClose, category }: DeleteCategor
     },
     onSuccess: () => {
       queryClient.invalidateQueries({ queryKey: ['restriction-categories'] })
-      toast({
+      toaster.create({
         title: 'Category Deleted',
         description: 'The restriction category has been deleted successfully.',
-        status: 'success',
+        type: 'success',
         duration: 3000,
-        isClosable: true,
       })
       onClose()
     },
     onError: () => {
-      toast({
+      toaster.create({
         title: 'Error',
         description: 'Failed to delete restriction category.',
-        status: 'error',
+        type: 'error',
         duration: 3000,
-        isClosable: true,
       })
     },
   })
@@ -63,45 +68,56 @@ export function DeleteCategoryModal({ isOpen, onClose, category }: DeleteCategor
   if (!category) return null
 
   return (
-    <DialogRoot open={isOpen} onOpenChange={(e) => !e.open && onClose()}>
-      <DialogContent bg="gray.800" color="white" rounded="xl" shadow="xl">
-        <DialogHeader>
-          <DialogTitle>Delete Restriction Category</DialogTitle>
-          <DialogCloseTrigger />
-        </DialogHeader>
+    <>
+      <DialogRoot open={isOpen} onOpenChange={(e) => !e.open && onClose()}>
+        <DialogContent bg="gray.800" color="white" rounded="xl" shadow="xl">
+          <DialogHeader>
+            <DialogTitle>Delete Restriction Category</DialogTitle>
+            <DialogCloseTrigger />
+          </DialogHeader>
 
-        <DialogBody>
-          <Alert status="warning" bg="orange.900" borderRadius="md" mb={4}>
-            <AlertIcon />
-            <Text fontSize="sm">
-              This action cannot be undone. This will permanently delete the restriction category.
-            </Text>
-          </Alert>
-
-          <Text mb={4}>
-            Are you sure you want to delete the restriction category:
-          </Text>
-
-          <Text fontWeight="bold" color="red.300" mb={6}>
-            "{category.restrictionCategoryName}"
-          </Text>
-        </DialogBody>
-
-        <DialogFooter>
-          <HStack justify="flex-end" spacing={3}>
-            <Button onClick={onClose} variant="outline" colorScheme="gray">
-              Cancel
-            </Button>
-            <Button
-              onClick={handleDelete}
-              isLoading={deleteMutation.isPending}
-              colorScheme="red"
+          <DialogBody>
+            <AlertRoot
+              status="warning"
+              bg="orange.900"
+              borderRadius="md"
+              mb={4}
+              variant="subtle"
             >
-              Delete Category
-            </Button>
-          </HStack>
-        </DialogFooter>
-      </DialogContent>
-    </DialogRoot>
+              <AlertIndicator />
+              <AlertDescription fontSize="sm">
+                This action cannot be undone. This will permanently delete the restriction category.
+              </AlertDescription>
+            </AlertRoot>
+
+            <Text mb={4}>
+              Are you sure you want to delete the restriction category:
+            </Text>
+
+            <Text fontWeight="bold" color="red.300" mb={6}>
+              "{category.restrictionCategoryName}"
+            </Text>
+          </DialogBody>
+
+          <DialogFooter>
+            <HStack justify="flex-end" spacing={3}>
+              <Button onClick={onClose} variant="outline" colorScheme="gray">
+                Cancel
+              </Button>
+              <Button
+                onClick={handleDelete}
+                isLoading={deleteMutation.isPending}
+                colorScheme="red"
+              >
+                Delete Category
+              </Button>
+            </HStack>
+          </DialogFooter>
+        </DialogContent>
+      </DialogRoot>
+
+      {/* Best practice: move <Toaster /> to App.tsx once globally */}
+      <Toaster />
+    </>
   )
 }
