--- a/test/index.html
+++ b/test/index.html
@@ -1,137 +1,85 @@
-import {
-  DialogRoot,
-  DialogContent,
-  DialogHeader,
-  DialogBody,
-  DialogFooter,
-  DialogTitle,
-  DialogCloseTrigger,
-  Button,
-  Text,
-  HStack,
-} from "@chakra-ui/react";
+import { Box, Button, Flex } from '@chakra-ui/react'
+import { FiPlus } from 'react-icons/fi'
+import { DataTable } from '../../components/DataTable'
+import { CreateCategoryModal } from '../../components/CreateCategoryModal'
+import { DeleteCategoryModal } from '../../components/DeleteCategoryModal'
+import { useRestrictionCategories } from '../../hooks/useRestrictionCategories'
+import { restrictionCategoryColumns } from '../../data/columns'
+import { useState } from 'react'
+import { useDisclosure } from '@chakra-ui/react'
 
-import {
-  AlertRoot,
-  AlertIndicator,
-  AlertDescription,
-} from "@chakra-ui/react/alert";
+export function RestrictionCategoryPage() {
+  const createDialog = useDisclosure()
+  const editDialog = useDisclosure()
+  const deleteDialog = useDisclosure()
+  const { data: categories, isLoading } = useRestrictionCategories()
+  const [selectedCategory, setSelectedCategory] = useState<any>(null)
+  const [modalMode, setModalMode] = useState<'create' | 'edit'>('create')
 
-import { toaster } from "@loim/loim-ui";
-import { useMutation, useQueryClient } from "@tanstack/react-query";
+  // Handlers accessible from DataTable actions
+  window.handleEditCategory = (category: any) => {
+    setSelectedCategory(category)
+    setModalMode('edit')
+    editDialog.onOpen()
+  }
 
-interface Category {
-  id: string;
-  name: string;
-}
+  window.handleDeleteCategory = (category: any) => {
+    setSelectedCategory(category)
+    deleteDialog.onOpen()
+  }
 
-interface DeleteCategoryModalProps {
-  open: boolean;
-  onClose: () => void;
-  category?: Category | null;
-}
-
-export function DeleteCategoryModal({
-  open,
-  onClose,
-  category,
-}: DeleteCategoryModalProps) {
-  const queryClient = useQueryClient();
-
-  const deleteMutation = useMutation({
-    mutationFn: async (categoryId: string) => {
-      const res = await fetch(
-        `http://nycuapp03.biz.lodh.com:8787/RestrictionCategory/${categoryId}`,
-        {
-          method: "DELETE",
-          credentials: "include",
-          headers: {
-            "Content-Type": "application/json",
-          },
-        }
-      );
-
-      if (!res.ok) {
-        throw new Error("Failed to delete restriction category");
-      }
-
-      return categoryId;
-    },
-    onSuccess: () => {
-      queryClient.invalidateQueries({ queryKey: ["restriction-categories"] });
-      toaster.create({
-        title: "Category Deleted",
-        description: "The restriction category has been deleted successfully.",
-        type: "success",
-        duration: 3000,
-      });
-      onClose();
-    },
-    onError: () => {
-      toaster.create({
-        title: "Error",
-        description: "Failed to delete restriction category.",
-        type: "error",
-        duration: 3000,
-      });
-    },
-  });
-
-  const handleDelete = () => {
-    if (category?.id) {
-      deleteMutation.mutate(category.id);
-    }
-  };
-
-  if (!category) return null;
+  const handleCreateNew = () => {
+    setSelectedCategory(null)
+    setModalMode('create')
+    createDialog.onOpen()
+  }
 
   return (
-    <DialogRoot open={open} onOpenChange={(e) => !e.open && onClose()}>
-      <DialogContent bg="gray.800" color="white" rounded="xl" shadow="xl">
-        <DialogHeader>
-          <DialogTitle>Delete Restriction Category</DialogTitle>
-          <DialogCloseTrigger />
-        </DialogHeader>
+    <Box>
+      {/* Action Bar */}
+      <Flex justify="flex-start" mb={4}>
+        <Button
+          leftIcon={<FiPlus />}
+          onClick={handleCreateNew}
+          bg="gray.700"
+          color="white"
+          _hover={{ bg: 'gray.600' }}
+          size="sm"
+        >
+          Add New Restriction Category
+        </Button>
+      </Flex>
 
-        <DialogBody>
-          <AlertRoot
-            status="warning"
-            bg="orange.900"
-            borderRadius="md"
-            mb={4}
-            variant="subtle"
-          >
-            <AlertIndicator />
-            <AlertDescription fontSize="sm">
-              This action cannot be undone. This will permanently delete the
-              restriction category.
-            </AlertDescription>
-          </AlertRoot>
+      {/* Data Table */}
+      <DataTable
+        columns={restrictionCategoryColumns}
+        data={categories || []}
+        loading={isLoading}
+        enableFiltering
+        enableExport
+      />
 
-          <Text mb={4}>
-            Are you sure you want to delete the restriction category:
-          </Text>
+      {/* Create Dialog */}
+      <CreateCategoryModal
+        isOpen={createDialog.isOpen}
+        onClose={createDialog.onClose}
+        mode="create"
+      />
 
-          <Text fontWeight="bold" color="red.300" mb={6}>
-            "{category.name}"
-          </Text>
-        </DialogBody>
+      {/* Edit Dialog */}
+      <CreateCategoryModal
+        isOpen={editDialog.isOpen}
+        onClose={editDialog.onClose}
+        category={selectedCategory}
+        mode="edit"
+      />
 
-        <DialogFooter>
-          <HStack justify="flex-end" gap={3}>
-            <Button onClick={onClose} variant="outline" colorScheme="gray">
-              Cancel
-            </Button>
-            <Button
-              onClick={handleDelete}
-              isLoading={deleteMutation.isPending}
-              colorScheme="red"
-            >
-              Delete Category
-            </Button>
-          </HStack>
-        </DialogFooter>
-      </DialogContent>
-    </DialogRoot>
-  );
+      {/* Delete Dialog */}
+      <DeleteCategoryModal
+        isOpen={deleteDialog.isOpen}
+        onClose={deleteDialog.onClose}
+        category={selectedCategory}
+      />
+    </Box>
+  )
 }
